--- a/my_LinuxCNC_machine.ini
+++ b/my_LinuxCNC_machine.ini
@@ -67,6 +67,8 @@ SHUTDOWN = shutdown.hal
 
 [HALUI]
 MDI_COMMAND = o<zero-z> call
+MDI_COMMAND = o<first-tool> call
+MDI_COMMAND = o<atc> call
 
 [TRAJ]
 AXES = 3
@@ -101,6 +103,7 @@ STEPSPACE  = 2000
 STEP_SCALE = -1950.0
 MIN_LIMIT = -3000.0
 MAX_LIMIT = 3000.0
+BACKLASH = 0.055
 HOME_OFFSET = 140.07
 HOME_SEARCH_VEL = 16.666667
 HOME_LATCH_VEL = 1.666667
@@ -127,6 +130,7 @@ STEPSPACE  = 2000
 STEP_SCALE = -1950.0
 MIN_LIMIT = -200.0
 MAX_LIMIT = 200.0
+BACKLASH = 0.06
 HOME_OFFSET = 72.658
 HOME_SEARCH_VEL = 16.666667
 HOME_LATCH_VEL = 1.666667
@@ -143,14 +147,14 @@ TYPE = LINEAR
 HOME = 0
 FERROR = 0.005
 MIN_FERROR = 0.0005
-MAX_VELOCITY = 16.6666666667
-MAX_ACCELERATION = 500.0
+MAX_VELOCITY = 14
+MAX_ACCELERATION = 400.0
 # these are in nanoseconds
 DIRSETUP   = 2000
 DIRHOLD    = 2000
 STEPLEN    = 2000
 STEPSPACE  = 2000
-STEP_SCALE = -3000.0
+STEP_SCALE = -4500
 MIN_LIMIT = -300.0
 MAX_LIMIT = 300.0
 HOME_OFFSET = 5.0
