--- a/my_LinuxCNC_machine.ini
+++ b/my_LinuxCNC_machine.ini
@@ -34,11 +34,15 @@ GEOMETRY = xyz
 [FILTER]
 PROGRAM_EXTENSION = .png,.gif,.jpg Greyscale Depth Image
 PROGRAM_EXTENSION = .py Python Script
-png = image-to-gcode
+#png = image-to-gcode
 gif = image-to-gcode
 jpg = image-to-gcode
 py = python
-
+#PROGRAM_EXTENSION = .png,.gif,.jpg,.jpeg images for gcode-burner
+png = /home/alex/linuxcnc/nc_files/gcode-burner.py
+#       gif = gcode-burner
+#       jpg = gcode-burner
+#       jpeg = gcode-burner
 [TASK]
 TASK = milltask
 CYCLE_TIME = 0.010
@@ -91,23 +95,22 @@ TOOLCHANGE_QUILL_UP = 1
 [AXIS_0]
 TYPE = LINEAR
 HOME = 0
-FERROR = 0.005
-MIN_FERROR = 0.0005
-MAX_VELOCITY = 66.6666666667
+FERROR = 0.05
+MIN_FERROR = 0.005
+MAX_VELOCITY = 50
 MAX_ACCELERATION = 500.0
 # these are in nanoseconds
 DIRSETUP   = 2000
 DIRHOLD    = 2000
 STEPLEN    = 2000
 STEPSPACE  = 2000
-STEP_SCALE = -1950.0
+STEP_SCALE = -960.0
 MIN_LIMIT = -3000.0
 MAX_LIMIT = 3000.0
 BACKLASH = 0.055
 HOME_OFFSET = 140.07
 HOME_SEARCH_VEL = 16.666667
-HOME_LATCH_VEL = 1.666667
-#HOME_FINAL_VEL = 50.000000
+HOME_LATCH_VEL = -1.666667
 HOME_USE_INDEX = NO
 HOME_IGNORE_LIMITS = YES
 HOME_SEQUENCE = 1
@@ -118,26 +121,25 @@ HOME_SEQUENCE = 1
 [AXIS_1]
 TYPE = LINEAR
 HOME = 0
-FERROR = 0.005
-MIN_FERROR = 0.0005
-MAX_VELOCITY = 58.3333333333
+FERROR = 0.05
+MIN_FERROR = 0.005
+MAX_VELOCITY = 50
 MAX_ACCELERATION = 500.0
 # these are in nanoseconds
 DIRSETUP   = 2000
 DIRHOLD    = 2000
 STEPLEN    = 2000
 STEPSPACE  = 2000
-STEP_SCALE = -1950.0
+STEP_SCALE = -960.0
 MIN_LIMIT = -200.0
 MAX_LIMIT = 200.0
 BACKLASH = 0.06
 HOME_OFFSET = 72.658
 HOME_SEARCH_VEL = 16.666667
-HOME_LATCH_VEL = 1.666667
-#HOME_FINAL_VEL = 0.016667
+HOME_LATCH_VEL = -1.666667
 HOME_USE_INDEX = NO
 HOME_IGNORE_LIMITS = YES
-HOME_SEQUENCE = 2
+HOME_SEQUENCE = 1
 
 #********************
 # Axis Z
@@ -145,9 +147,9 @@ HOME_SEQUENCE = 2
 [AXIS_2]
 TYPE = LINEAR
 HOME = 0
-FERROR = 0.005
-MIN_FERROR = 0.0005
-MAX_VELOCITY = 14
+FERROR = 0.05
+MIN_FERROR = 0.005
+MAX_VELOCITY = 18
 MAX_ACCELERATION = 400.0
 # these are in nanoseconds
 DIRSETUP   = 2000
@@ -155,12 +157,11 @@ DIRHOLD    = 2000
 STEPLEN    = 2000
 STEPSPACE  = 2000
 STEP_SCALE = -4500
-MIN_LIMIT = -300.0
-MAX_LIMIT = 300.0
+MIN_LIMIT = -400.0
+MAX_LIMIT = 400.0
 HOME_OFFSET = 5.0
 HOME_SEARCH_VEL = 13.316667
-HOME_LATCH_VEL = 1.666667
-#HOME_FINAL_VEL = 16.666667
+HOME_LATCH_VEL = -1.666667
 HOME_USE_INDEX = NO
 HOME_IGNORE_LIMITS = YES
 HOME_SEQUENCE = 0
