--- a/my_LinuxCNC_machine.ini
+++ b/my_LinuxCNC_machine.ini
@@ -31,6 +31,10 @@ MIN_ANGULAR_VELOCITY = 0.010000
 EDITOR = gedit
 GEOMETRY = xyz
 
+NGCGUI  = /home/alex/linuxcnc/configs/my_LinuxCNC_machine/ngcgui.tcl
+TKAPP   = /home/alex/linuxcnc/configs/my_LinuxCNC_machine/ngcgui_app.tcl
+TKAPP   = /home/alex/linuxcnc/configs/my_LinuxCNC_machine/ngcgui_ttt.tcl
+
 [FILTER]
 PROGRAM_EXTENSION = .png,.gif,.jpg Greyscale Depth Image
 PROGRAM_EXTENSION = .py Python Script
@@ -109,8 +113,8 @@ MIN_LIMIT = -3000.0
 MAX_LIMIT = 3000.0
 BACKLASH = 0.055
 HOME_OFFSET = 140.07
-HOME_SEARCH_VEL = 16.666667
-HOME_LATCH_VEL = -1.666667
+HOME_SEARCH_VEL = 17
+HOME_LATCH_VEL = -1.5
 HOME_USE_INDEX = NO
 HOME_IGNORE_LIMITS = YES
 HOME_SEQUENCE = 1
@@ -135,8 +139,8 @@ MIN_LIMIT = -200.0
 MAX_LIMIT = 200.0
 BACKLASH = 0.06
 HOME_OFFSET = 72.658
-HOME_SEARCH_VEL = 16.666667
-HOME_LATCH_VEL = -1.666667
+HOME_SEARCH_VEL = 17
+HOME_LATCH_VEL = -1.5
 HOME_USE_INDEX = NO
 HOME_IGNORE_LIMITS = YES
 HOME_SEQUENCE = 1
@@ -149,19 +153,19 @@ TYPE = LINEAR
 HOME = 0
 FERROR = 0.05
 MIN_FERROR = 0.005
-MAX_VELOCITY = 18
+MAX_VELOCITY = 34
 MAX_ACCELERATION = 400.0
 # these are in nanoseconds
 DIRSETUP   = 2000
 DIRHOLD    = 2000
 STEPLEN    = 2000
 STEPSPACE  = 2000
-STEP_SCALE = -2250
-MIN_LIMIT = -400.0
-MAX_LIMIT = 400.0
+STEP_SCALE = 960
+MIN_LIMIT = -500.0
+MAX_LIMIT = 500.0
 HOME_OFFSET = 5.0
-HOME_SEARCH_VEL = 13.316667
-HOME_LATCH_VEL = -1.666667
+HOME_SEARCH_VEL = 17
+HOME_LATCH_VEL = -1.5
 HOME_USE_INDEX = NO
 HOME_IGNORE_LIMITS = YES
 HOME_SEQUENCE = 0
