--- a/my_LinuxCNC_machine.ini
+++ b/my_LinuxCNC_machine.ini
@@ -111,8 +111,8 @@ STEPSPACE  = 2000
 STEP_SCALE = -960.0
 MIN_LIMIT = -3000.0
 MAX_LIMIT = 3000.0
-BACKLASH = 0.055
-HOME_OFFSET = 140.07
+BACKLASH = 0.03
+HOME_OFFSET = 139.847 #140.07
 HOME_SEARCH_VEL = 17
 HOME_LATCH_VEL = -1.5
 HOME_USE_INDEX = NO
@@ -137,8 +137,8 @@ STEPSPACE  = 2000
 STEP_SCALE = -960.0
 MIN_LIMIT = -200.0
 MAX_LIMIT = 200.0
-BACKLASH = 0.06
-HOME_OFFSET = 72.658
+BACKLASH = 0.055
+HOME_OFFSET = 54.06 #72.658
 HOME_SEARCH_VEL = 17
 HOME_LATCH_VEL = -1.5
 HOME_USE_INDEX = NO
@@ -153,7 +153,7 @@ TYPE = LINEAR
 HOME = 0
 FERROR = 0.05
 MIN_FERROR = 0.005
-MAX_VELOCITY = 34
+MAX_VELOCITY = 30
 MAX_ACCELERATION = 400.0
 # these are in nanoseconds
 DIRSETUP   = 2000
