--- a/my_LinuxCNC_machine.ini
+++ b/my_LinuxCNC_machine.ini
@@ -111,8 +111,8 @@ STEPSPACE  = 2000
 STEP_SCALE = -960.0
 MIN_LIMIT = -3000.0
 MAX_LIMIT = 3000.0
-BACKLASH = 0.03
-HOME_OFFSET = 139.847 #140.07
+BACKLASH = 0.12
+HOME_OFFSET = 139.83#139.847 #140.07
 HOME_SEARCH_VEL = 17
 HOME_LATCH_VEL = -1.5
 HOME_USE_INDEX = NO
@@ -137,8 +137,8 @@ STEPSPACE  = 2000
 STEP_SCALE = -960.0
 MIN_LIMIT = -200.0
 MAX_LIMIT = 200.0
-BACKLASH = 0.055
-HOME_OFFSET = 54.06 #72.658
+BACKLASH = 0.08
+HOME_OFFSET = 54.128#54.06 #72.658
 HOME_SEARCH_VEL = 17
 HOME_LATCH_VEL = -1.5
 HOME_USE_INDEX = NO
