Go home button added

--- a/my_LinuxCNC_machine.ini
+++ b/my_LinuxCNC_machine.ini
@@ -77,6 +77,7 @@ SHUTDOWN = shutdown.hal
 MDI_COMMAND = o<zero-z> call
 MDI_COMMAND = o<first-tool> call
 MDI_COMMAND = o<atc> call
+MDI_COMMAND = g53g0x0y0z0
 
 [TRAJ]
 AXES = 3
