Limits were set

--- a/my_LinuxCNC_machine.ini
+++ b/my_LinuxCNC_machine.ini
@@ -9,6 +9,7 @@ NML_FILE=linuxcnc.nml
 
 [DISPLAY]
 DISPLAY = axis
+OPEN_FILE=""
 #EMBED_TAB_NAME = GladeVCP
 #EMBED_TAB_COMMAND = halcmd loadusr -Wn gladevcp gladevcp -c gladevcp -H gvcp_call_list.hal -x {XID} gvcp-panel.ui
 POSITION_OFFSET = RELATIVE
@@ -111,8 +112,8 @@ DIRHOLD    = 3000
 STEPLEN    = 3000
 STEPSPACE  = 3000
 STEP_SCALE = -960.0
-MIN_LIMIT = -3000.0
-MAX_LIMIT = 3000.0
+MIN_LIMIT = -139.0
+MAX_LIMIT = 139.0
 BACKLASH = 0.075
 HOME_OFFSET = 139.83#139.847 #140.07
 HOME_SEARCH_VEL = 17
@@ -137,8 +138,8 @@ DIRHOLD    = 3000
 STEPLEN    = 3000
 STEPSPACE  = 3000
 STEP_SCALE = -960.0
-MIN_LIMIT = -200.0
-MAX_LIMIT = 200.0
+MIN_LIMIT = -106
+MAX_LIMIT = 53.5
 BACKLASH = 0.08
 HOME_OFFSET = 54.128#54.06 #72.658
 HOME_SEARCH_VEL = 17
@@ -163,8 +164,8 @@ DIRHOLD    = 3000
 STEPLEN    = 3000
 STEPSPACE  = 3000
 STEP_SCALE = 960
-MIN_LIMIT = -500.0
-MAX_LIMIT = 500.0
+MIN_LIMIT = -600.0
+MAX_LIMIT = 4.5
 HOME_OFFSET = 5.0
 HOME_SEARCH_VEL = 17
 HOME_LATCH_VEL = -1.5
