--- a/my_LinuxCNC_machine.ini
+++ b/my_LinuxCNC_machine.ini
@@ -33,9 +33,9 @@ MIN_ANGULAR_VELOCITY = 0.010000
 EDITOR = gedit
 GEOMETRY = xyz
 
-NGCGUI  = /home/alex/linuxcnc/configs/my_LinuxCNC_machine/ngcgui.tcl
-TKAPP   = /home/alex/linuxcnc/configs/my_LinuxCNC_machine/ngcgui_app.tcl
-TKAPP   = /home/alex/linuxcnc/configs/my_LinuxCNC_machine/ngcgui_ttt.tcl
+#NGCGUI  = /home/alex/linuxcnc/configs/my_LinuxCNC_machine/ngcgui.tcl
+#TKAPP   = /home/alex/linuxcnc/configs/my_LinuxCNC_machine/ngcgui_app.tcl
+#TKAPP   = /home/alex/linuxcnc/configs/my_LinuxCNC_machine/ngcgui_ttt.tcl
 
 [FILTER]
 PROGRAM_EXTENSION = .png,.gif,.jpg Greyscale Depth Image
@@ -89,6 +89,8 @@ ANGULAR_UNITS = degree
 CYCLE_TIME = 0.010
 DEFAULT_VELOCITY = 6.67
 MAX_LINEAR_VELOCITY = 66.67
+
+NO_FORCE_HOMING = 1
 
 [EMCIO]
 EMCIO = io
