atc changed to use g30. nc_files added to git

--- a/my_LinuxCNC_machine.ini
+++ b/my_LinuxCNC_machine.ini
@@ -9,7 +9,7 @@ NML_FILE=linuxcnc.nml
 
 [DISPLAY]
 DISPLAY = axis
-OPEN_FILE=""
+#OPEN_FILE=""
 #EMBED_TAB_NAME = GladeVCP
 #EMBED_TAB_COMMAND = halcmd loadusr -Wn gladevcp gladevcp -c gladevcp -H gvcp_call_list.hal -x {XID} gvcp-panel.ui
 POSITION_OFFSET = RELATIVE
@@ -157,8 +157,8 @@ HOME_SEQUENCE = 1
 TYPE = LINEAR
 HOME = 0
 FERROR = 0.2
-MIN_FERROR = 0.005
-MAX_VELOCITY = 30
+MIN_FERROR = 0.01
+MAX_VELOCITY = 27
 MAX_ACCELERATION = 850.0
 # these are in nanoseconds
 DIRSETUP   = 3000
