--- a/my_LinuxCNC_machine.ini
+++ b/my_LinuxCNC_machine.ini
@@ -78,7 +78,7 @@ SHUTDOWN = shutdown.hal
 [HALUI]
 MDI_COMMAND = o<zero-z> call
 MDI_COMMAND = o<first-tool> call
-MDI_COMMAND = o<atc> call
+MDI_COMMAND = o<auto-tool-change> call
 MDI_COMMAND = g53g0x0y0z0
 
 [TRAJ]
